# crontrans

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
crontrans/: cli.py  constants.py  explain.py  generate.py  parser.py  templates.py
crontrans.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_explain.py  test_generate.py  test_parser.py
