[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crontrans"
version = "0.1.0"
description = "Bidirectional CLI tool for translating cron expressions to and from plain English"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "kvnlnk" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
crontrans = "crontrans.cli:main"

[project.optional-dependencies]
test = ["pytest"]
